agrega menu vista movil

--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>titulo</title>
+    <title>Cine CAC</title>
     <link rel="stylesheet" href="./css/css.css">
 </head>
 <body>
-    <section id="caja">
-        <div class="items"><img src="img/gato_con_suerte.jpg" alt=""></div>
-        <div class="items"><img src="img/nino-garza.jpg" alt=""></div>
-        <div class="items"><img src="img/jack_caja_3.jpg" alt=""></div>
-        <div class="items"><img src="img/horrorland.jpg" alt=""></div>
-        <div class="items"><img src="img/garfield_fuera.jpg" alt=""></div>
-        <div class="items"><img src="img/boonie-bears-3.jpg" alt=""></div>
-        <span class="texto">mas vistos</span>
-    </section>
+    <header class="header">
+        <a  class="icon" tabindex="1" accesskey="1">X</a>
+        <!-- <label class="icon" for="menu">X</label> -->
+        <!-- <input type="checkbox" id="menu"> -->
+        <ul class="lista_menu">
+            <a href="peliculas.html">peliculas</a> 
+            <a href="estrenos.html">estrenos</a> 
+            <a href="recuerdos.html">recuerdos</a> 
+            <a href="vota_y_mira.html">vota y mira</a> 
+            <a href="membresias.html">membresias</a> 
+            <a href="store.html">store</a> 
+            <a href="ubicaciones.html">ubicaciones</a> 
+            <a href="para_negocios.html">para negocios</a> 
+        </ul>
+        <span class="logo">Cine Codo</span>
+    </header>
+    <main>
+        <section id="caja">
+            <div class="items"><img src="img/gato_con_suerte.jpg" alt=""></div>
+            <div class="items"><img src="img/nino-garza.jpg" alt=""></div>
+            <div class="items"><img src="img/jack_caja_3.jpg" alt=""></div>
+            <div class="items"><img src="img/horrorland.jpg" alt=""></div>
+            <div class="items"><img src="img/garfield_fuera.jpg" alt=""></div>
+            <div class="items"><img src="img/boonie-bears-3.jpg" alt=""></div>
+            <span class="texto">Mas vistos!</span>
+        </section>
+        <div class="caja_de_relleno"></div>
+        <div class="caja_de_relleno"></div>
+        <div class="caja_de_relleno"></div>
+        <div class="caja_de_relleno"></div>
+        <div class="caja_de_relleno"></div>
+        <div class="caja_de_relleno"></div>
+        <div class="caja_de_relleno"></div>
+        <div class="caja_de_relleno"></div>
+        <div class="caja_de_relleno"></div>
+        <div class="caja_de_relleno"></div>
+    </main>
+    <footer>
+        <p></p>
+        <small></small>
+        <address></address>
+    </footer>
 </body>
 </html>
