Agregado de contacto iniciar sesion y registrarse

--- a/src/Prueba TP/index.html
+++ b/src/Prueba TP/index.html
@@ -40,16 +40,16 @@
           <li><a class="lista" href="#galeria">Galería</a></li>
           <li><a class="lista" href="#productos">Productos</a></li>
           <li><a class="lista" href="#quienes-somos">Quienes Somos</a></li>
-          <li><a class="lista" href="#">Contacto</a></li>
+          <li><a class="lista" href="./templates/contacto.html">Contacto</a></li>
           <li>
             <a class="linkNav Login" href="#">Login</a>
             <!-- menu desplegable -->
             <ul class="dropdown-content">
               <li class="listaItem">
-                <a class="linkNav" href="#">Iniciar sesión</a>
+                <a class="linkNav" href="./templates/iniciar-sesion.html">Iniciar sesión</a>
               </li>
               <li class="listaItem">
-                <a class="linkNav" href="#">Registrarse</a>
+                <a class="linkNav" href="./templates/register.html">Registrarse</a>
               </li>
             </ul>
           </li>
