pagina de registro

--- a/src/Prueba TP/index.html
+++ b/src/Prueba TP/index.html
@@ -29,8 +29,10 @@
         <!-- Logo -->
         <div id="logo">
           <a href="/">
-            <i class="fa-solid fa-futbol"></i>
+            <!-- <i class="fa-solid fa-futbol"></i> -->
+            
             <span class="logo-text">CAMPEONES DEL MUNDO</span>
+            <img src="./static/img/Golden-Sta.png" alt="logo Estrellas">
           </a>
         </div>
 
