--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- vinculación con estilos y favicon -->
-    <link rel="stylesheet" href="./static/css/style.css" />
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon" />
     <title>Campeones del Mundo</title>
     <!-- vinculación con google-fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
