add animation reflect to logo img

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,10 @@
           <!-- <i class="fa-solid fa-futbol"></i> -->
 
           <span class="logo-text">CAMPEONES DEL MUNDO</span>
-          <img src="./img/Golden-Sta.png" alt="logo Estrellas">
+          <div class="icon_logo_container">
+            <img src="./img/Golden-Sta.png" class="icon_logo" alt="imagen de 3 Estrellas">
+            <img src="./img/Golden-Sta.png" class="logo_logo_reflejo" alt="imagen de 3 Estrellas">
+          </div>
         </a>
       </div>
 
