tranform of the header

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 <body>
   <!-- Encabezado -->
   <header class="header">
-    <nav>
+    <nav class="menu">
       <!-- Logo -->
       <div id="logo">
         <a href="/">
