--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <nav class="menu">
       <!-- Logo -->
       <div id="logo">
-        <a  href="/">
+        <a href="/">
           <!-- <i class="fa-solid fa-futbol"></i> -->
 
           <span class="logo-text">CAMPEONES DEL MUNDO</span>
@@ -40,7 +40,7 @@
         <li><a class="lista" href="#galeria">Galería</a></li>
         <li><a class="lista" href="#productos">Productos</a></li>
         <li><a class="lista" href="#quienes-somos">Quienes Somos</a></li>
-        <li><a class="lista" href="./templates/contacto.html">Contacto</a></li>
+        <li><a class="lista" href="./views/contacto.html">Contacto</a></li>
         <li class="sub_menu">
           <a class="linkNav Login lista" href="#">Login</a>
           <!-- menu desplegable -->
@@ -49,10 +49,10 @@
               <!-- <div class="sub_menu_aux_2"> -->
               <ul class="dropdown-content">
                 <li class="listaItem">
-                  <a class="lista" href="./templates/iniciar-sesion.html">Iniciar sesión</a>
+                  <a class="lista" href="./views/iniciar-sesion.html">Iniciar sesión</a>
                 </li>
                 <li class="listaItem">
-                  <a class="lista" href="./templates/register.html">Registrarse</a>
+                  <a class="lista" href="./views/register.html">Registrarse</a>
                 </li>
               </ul>
             </div>
@@ -396,10 +396,31 @@
     </section>
   </main>
 
-  <footer id="footer">
-    <a href="">Términos y condiciones</a>
-    <a href="">Preguntas Frecuentes</a>
-    <a href="">Ayuda</a>
+  <footer class="footer-container">
+    <div class="footer">
+      <div class="col-1">
+        <strong>Mas sobre nosotros</strong>
+        <p>politicas de privacidad</p>
+        <p>terminos de uso</p>
+        <p>soporte tecnico de la web</p>
+      </div>
+
+      <div class="col-2">
+        <strong>Redes sociales</strong>
+        <div class="lista-iconos">
+          <span class="social-1"></span>
+          <span class="social-2"></span>
+          <!-- <span class="social-3"></span> -->
+          <span class="social-4"></span>
+          <!-- <span class="social-5"></span> -->
+        </div>
+      </div>
+      <div class="col-3">
+        <strong>descarga nuestras app</strong>
+        <img src="./img/download_app.png" alt="">
+        <img src="./img/google_play.png" alt="">
+      </div>
+    </div>
   </footer>
 </body>
 
