--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,9 @@
       <!-- hipervínculos del menú -->
       <ul class="listaNav">
         <li><a class="lista" href="#">Inicio</a></li>
-        <li><a class="lista" href="#galeria">Galería</a></li>
-        <li><a class="lista" href="#productos">Productos</a></li>
-        <li><a class="lista" href="#quienes-somos">Quienes Somos</a></li>
+        <li><a class="lista" href="./views/galeria.html">Galería</a></li>
+        <li><a class="lista" href="./views/productos.html">Productos</a></li>
+        <li><a class="lista" href="./views/quienes-somos.html">Quienes Somos</a></li>
         <li><a class="lista" href="./views/contacto.html">Contacto</a></li>
         <li class="sub_menu">
           <a class="linkNav Login lista" href="#">Login</a>
