facilitado para responsivear

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
 <body>
   <!-- Encabezado -->
   <header class="header">
+    <div class="btn_menu icon-menu"></div>
     <nav class="menu">
       <!-- Logo -->
       <div id="logo">
