Arreglos de responsividad

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,8 @@
     <div class="btn_menu icon-menu"></div>
     <nav class="menu">
       <!-- Logo -->
-      <div id="logo">
+      <div class="logoTextoImg" id="logo">
         <a href="/">
-          <!-- <i class="fa-solid fa-futbol"></i> -->
-
           <span class="logo-text">CAMPEONES DEL MUNDO</span>
           <div class="icon_logo_container">
             <img src="./img/Golden-Sta.png" class="icon_logo" alt="imagen de 3 Estrellas">
