Más arreglos de responsividad

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <nav class="menu">
       <!-- Logo -->
       <div class="logoTextoImg" id="logo">
-        <a href="/">
+        <a href="#">
           <span class="logo-text">CAMPEONES DEL MUNDO</span>
           <div class="icon_logo_container">
             <img src="./img/Golden-Sta.png" class="icon_logo" alt="imagen de 3 Estrellas">
@@ -42,7 +42,7 @@
         <li><a class="lista" href="#productos">Productos</a></li>
         <!-- <li><a class="lista" href="./views/quienes-somos.html">Quienes Somos</a></li> -->
         <li><a class="lista" href="#quienes-somos">Quienes Somos</a></li>
-        <li><a class="lista" href="./views/contacto.html">Contacto</a></li>
+        <li><a class="lista contacto" href="./views/contacto.html">Contacto</a></li>
         <!-- <li><a class="lista" href="#quienes-somos">Contacto</a></li> -->
         <li class="sub_menu">
           <a class="linkNav Login lista" href="#">Login</a>
@@ -384,7 +384,7 @@
         </div>
         <p>
           Somos Campeones del Mundo!. <br />
-          Somos una empresa familiar, fundada en 2002, con sucursales en Mar
+          Somos una empresa familiar, fundada en 2002, con sucursales en Bariloche, Mar
           del Plata y CABA, dedicada principalmente a la venta de productos de
           la selección Argentinaa. <br />
           <br />
