boton para consulta API e implementacion

--- a/src/index.html
+++ b/src/index.html
@@ -33,35 +33,29 @@
       <section id="banner" class="d-flex">
         <div class="card-banner container">
           <h1>ARGENTINA CAMPEÓN DEL MUNDO<br />2022</h1>
-          <a href="./templates/register.html" class="btn-Registrarse"
-            >Registrate</a
+          <a href="./views/register.html" class="btn-Registrarse"
+            >REGISTRATE</a
           >
           <h2 class="titulo_h2">
             Registrate para comprar productos de la Selección Argentina
           </h2>
 
-          <!-- <video class="video_penal_montiel" src="./video/space_mid.mp4"></video> -->
+
+          <a href="./views/paginaApi.html" target="_blank" class="btn-Registrarse"
+          >DATOS DE JUGADORES</a
+        >
+        <h2 class="titulo_h2 api">
+          Conocé más sobre cada uno de nuestros jugadores! 
+        </h2>
+
         </div>
       </section>
 
-      <!-- search: sección que contiene un mensaje de búsqueda
-            y un campo de entrada de texto para que los usuarios
-            ingresen lo que desean buscar en un sitio web
-              -->
-      <!-- <section id="search" class="container">
-          <h2 class="search-title">¿Qué estas buscando para ver?</h2>
-          <input type="text" class="input-search" placeholder="Buscar..." />
-        </section> -->
-
-      <!-- popular: mostrar imágenes de las peliculas
-            con tendencia hoy -->
       <section id="galeria">
-        <!-- División contenedora del titulo
-                e imagenes -->
+
         <div class="container" class="movies-grid">
           <h2>Galería</h2>
-          <!-- Div para mostrar todas las imagenes e info 
-                    de las películas -->
+
           <div id="list-popular">
             <!-- División que mostrará imagen y detalle de la pelicula, mismo 
                     formato para todas las peliculas -->
