Limpieza de codigo

--- a/src/index.html
+++ b/src/index.html
@@ -25,43 +25,38 @@
   <body>
     <!-- Encabezado -->
     <header class="header" id="idHeader">
-       <!-- Agregado por JS -->
+      <!-- Agregado por JS -->
     </header>
 
-    <!-- Contenido -->
     <main>
       <section id="banner" class="d-flex">
         <div class="card-banner container">
           <h1>ARGENTINA CAMPEÓN DEL MUNDO<br />2022</h1>
-          <a href="./views/register.html" class="btn-Registrarse"
-            >REGISTRATE</a
-          >
+          <a href="./views/register.html" class="btn-Registrarse">REGISTRATE</a>
           <h2 class="titulo_h2">
             Registrate para comprar productos de la Selección Argentina
           </h2>
 
-
-          <a href="./views/paginaApi.html" target="_blank" class="btn-Registrarse"
-          >DATOS DE JUGADORES</a
-        >
-        <h2 class="titulo_h2 api">
-          Conocé más sobre cada uno de nuestros jugadores! 
-        </h2>
-
+          <a
+            href="./views/paginaApi.html"
+            target="_blank"
+            class="btn-Registrarse"
+            >DATOS DE JUGADORES</a
+          >
+          <h2 class="titulo_h2 api">
+            Conocé más sobre cada uno de nuestros jugadores!
+          </h2>
         </div>
       </section>
 
       <section id="galeria">
-
         <div class="container" class="movies-grid">
           <h2>Galería</h2>
 
           <div id="list-popular">
-            <!-- División que mostrará imagen y detalle de la pelicula, mismo 
-                    formato para todas las peliculas -->
-            <!-- pelicula 01 -->
+            3
             <div class="movie-item">
-              <a href="./templates/detail-movie.html">
+              <a href="#">
                 <img
                   src="./img/foto_1.jpg"
                   alt=""
@@ -75,28 +70,24 @@
                     El color del público argentino que se distinguió a lo largo
                     del torneo
                   </p>
-                  <!-- <p class="movie-item-detail-subtitle">2023 - 7.8</p> -->
                 </div>
               </a>
             </div>
 
-            <!-- pelicula 02 -->
             <div class="movie-item">
-              <a href="./templates/detail-movie.html">
+              <a href="#">
                 <img src="./img/foto_2.jpg" alt="" class="movie-item-img" />
 
                 <div class="movie-item-detail">
                   <p class="movie-item-detail-title">
                     La frase que inmortalizó Lionel Messi en el Mundial
                   </p>
-                  <!-- <p class="movie-item-detail-subtitle">2023 - 7.8</p> -->
                 </div>
               </a>
             </div>
 
-            <!-- pelicula 03 -->
             <div class="movie-item">
-              <a href="./templates/detail-movie.html">
+              <a href="#">
                 <img src="./img/foto_3.jpg" alt="" class="movie-item-img" />
 
                 <div class="movie-item-detail">
@@ -104,14 +95,12 @@
                     La habitual ceremonia previa a cada encuentro con fuegos
                     artificiales y un juego de luces
                   </p>
-                  <!-- <p class="movie-item-detail-subtitle">2023 - 7.8</p> -->
                 </div>
               </a>
             </div>
 
-            <!-- pelicula 04 -->
             <div class="movie-item">
-              <a href="./templates/detail-movie.html">
+              <a href="#">
                 <img src="./img/foto_4.jpg" alt="" class="movie-item-img" />
 
                 <div class="movie-item-detail">
@@ -119,70 +108,60 @@
                     Las formaciones en el momento de los himnos y en la previa
                     al gran duelo
                   </p>
-                  <!-- <p class="movie-item-detail-subtitle">2023 - 7.8</p> -->
                 </div>
               </a>
             </div>
 
-            <!-- pelicula 05 -->
             <div class="movie-item">
-              <a href="./templates/detail-movie.html">
+              <a href="#">
                 <img src="./img/foto_5.jpg" alt="" class="movie-item-img" />
 
                 <div class="movie-item-detail">
                   <p class="movie-item-detail-title">
                     Ángel Di María avanza a pura velocidad ante Jules Kounde
                   </p>
-                  <!-- <p class="movie-item-detail-subtitle">2023 - 7.8</p> -->
                 </div>
               </a>
             </div>
 
-            <!-- pelicula 06 -->
             <div class="movie-item">
-              <a href="./templates/detail-movie.html">
+              <a href="#">
                 <img src="./img/foto_6.jpg" alt="" class="movie-item-img" />
 
                 <div class="movie-item-detail">
                   <p class="movie-item-detail-title">
                     Alexis Mac Allister disputa la pelota con Antoine Griezmann
                   </p>
-                  <!-- <p class="movie-item-detail-subtitle">2023 - 7.8</p> -->
                 </div>
               </a>
             </div>
 
-            <!-- pelicula 07 -->
             <div class="movie-item">
-              <a href="./templates/detail-movie.html">
+              <a href="#">
                 <img src="./img/foto_7.jpg" alt="" class="movie-item-img" />
 
                 <div class="movie-item-detail">
                   <p class="movie-item-detail-title">
                     Lionel Messi encara ante Theo Hernandez
                   </p>
-                  <!-- <p class="movie-item-detail-subtitle">2023 - 7.8</p> -->
                 </div>
               </a>
             </div>
 
-            <!-- pelicula 08 -->
             <div class="movie-item">
-              <a href="./templates/detail-movie.html">
+              <a href="#">
                 <img src="./img/foto_8.jpg" alt="" class="movie-item-img" />
 
                 <div class="movie-item-detail">
                   <p class="movie-item-detail-title">
                     Ángel Di María remata con su zurda prodigiosa
                   </p>
-                  <!-- <p class="movie-item-detail-subtitle">2023 - 7.8</p> -->
                 </div>
               </a>
             </div>
 
-            <!-- pelicula 09 -->
             <div class="movie-item">
-              <a href="./templates/detail-movie.html">
+              <a href="#">
                 <img src="./img/foto_9.jpg" alt="" class="movie-item-img" />
 
                 <div class="movie-item-detail">
@@ -190,21 +169,18 @@
                     Hugo Lloris llega antes que Cristian Romero y despeja ante
                     el intento argentino
                   </p>
-                  <!-- <p class="movie-item-detail-subtitle">2023 - 7.8</p> -->
                 </div>
               </a>
             </div>
 
-            <!-- pelicula 10 -->
             <div class="movie-item">
-              <a href="./templates/detail-movie.html">
+              <a href="#">
                 <img src="./img/foto_10.jpg" alt="" class="movie-item-img" />
 
                 <div class="movie-item-detail">
                   <p class="movie-item-detail-title">
                     Batalla aérea entre Alexis Mac Allister y Olivier Giroud
                   </p>
-                  <!-- <p class="movie-item-detail-subtitle">2023 - 7.8</p> -->
                 </div>
               </a>
             </div>
@@ -212,16 +188,11 @@
         </div>
       </section>
 
-      <!-- top-rated: mostrar las películas más aclamadas-->
       <section id="productos">
-        <!-- División contenedora del titulo
-                e imagenes -->
         <div class="container">
           <h2>Nuestros productos</h2>
-          <!-- Div para mostrar todas las imagenes e info 
-                        de las películas -->
+
           <div id="list-top-rated" class="movies-scroller">
-            <!-- Info de las películas mismo formato para todas -->
             <!-- Producto 01 -->
             <div class="movie-item-v2">
               <div class="wrapper">
@@ -397,7 +368,7 @@
     </main>
 
     <footer class="footer-container" id="idFooter">
-       <!-- Agregado por JS -->
+      <!-- Agregado por JS -->
     </footer>
 
     <script src="./JS/index.js"></script>
