--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- vinculación con estilos y favicon -->
-    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon"/>
     <title>Campeones del Mundo</title>
     <!-- vinculación con google-fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/home.css" />
+    <link rel="stylesheet" href="./css/home.css"/>
 
     <!-- vinculación fontawesome -->
     <script
@@ -31,7 +31,7 @@
     <main>
       <section id="banner" class="d-flex">
         <div class="card-banner container">
-          <h1>ARGENTINA CAMPEÓN DEL MUNDO<br />2022</h1>
+          <h1>ARGENTINA CAMPEÓN DEL MUNDO<br/>2022</h1>
           <a href="./views/register.html" class="btn-Registrarse">REGISTRATE</a>
           <h2 class="titulo_h2">
             Registrate para comprar productos de la Selección Argentina
@@ -50,7 +50,7 @@
       </section>
 
       <section id="galeria">
-        <div class="container" class="movies-grid">
+        <div class="container">
           <h2>Galería</h2>
 
           <div id="list-popular">
@@ -196,7 +196,7 @@
             <div class="movie-item-v2">
               <div class="wrapper">
                 <img
-                  src="./img/Camiseta Adidas Titular.jpg"
+                  src="./img/Camiseta_Adidas_Titular.jpg"
                   alt=""
                   class="movie-item-img-v2"
                 />
@@ -213,7 +213,7 @@
             <div class="movie-item-v2">
               <div class="wrapper">
                 <img
-                  src="./img/Buzo arquero.jpg"
+                  src="./img/Buzo_arquero.jpg"
                   alt=""
                   class="movie-item-img-v2"
                 />
@@ -230,7 +230,7 @@
             <div class="movie-item-v2">
               <div class="wrapper">
                 <img
-                  src="./img/Short Infantil.jpg"
+                  src="./img/Short_Infantil.jpg"
                   alt=""
                   class="movie-item-img-v2"
                 />
@@ -247,7 +247,7 @@
             <div class="movie-item-v2">
               <div class="wrapper">
                 <img
-                  src="./img/Buzo adidas.jpg"
+                  src="./img/Buzo_adidas.jpg"
                   alt=""
                   class="movie-item-img-v2"
                 />
@@ -264,7 +264,7 @@
             <div class="movie-item-v2">
               <div class="wrapper">
                 <img
-                  src="./img/Mate Negro.jpg"
+                  src="./img/Mate_Negro.jpg"
                   alt=""
                   class="movie-item-img-v2"
                 />
@@ -281,7 +281,7 @@
             <div class="movie-item-v2">
               <div class="wrapper">
                 <img
-                  src="./img/Taza Messi.jpg"
+                  src="./img/Taza_Messi.jpg"
                   alt=""
                   class="movie-item-img-v2"
                 />
@@ -298,7 +298,7 @@
             <div class="movie-item-v2">
               <div class="wrapper">
                 <img
-                  src="./img/Tabla grande.jpg"
+                  src="./img/Tabla_grande.jpg"
                   alt=""
                   class="movie-item-img-v2"
                 />
@@ -315,7 +315,7 @@
             <div class="movie-item-v2">
               <div class="wrapper">
                 <img
-                  src="./img/Figura coleccionable.jpg"
+                  src="./img/Figura_coleccionable.jpg"
                   alt=""
                   class="movie-item-img-v2"
                 />
